directory housekeeping and added some styles to page

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concentration</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/script.js" defer></script>
 </head>
 <body>
     <div class="title">
+        <span class="material-symbols-outlined brain">
+            neurology
+        </span>
         <h1>CONCENTRATION</h1>
+        <br>
+        <span class="sub-title">A game for your brain</span>
     </div>
     <div class="container">
         <div class="text-container">
             <h2>How To Play</h2>
-            <p>Click on the cards below to reveal the face of the card. You can only view the face of two cards at a time so remember the position of them as you turn them over!<br> Once matched, a pair of cards will remain face up. Once all pairs have been revealed the game is over. Aim to use as few clicks as possible and complete the game as fast as possible. <br> Good luck!</p>
+            <p>Click on the cards below to reveal the face of the card. You can only view the faces of two cards at a time so remember the position of them as you turn them over! <br> Once matched, a pair of cards will remain face up and once all pairs have been revealed, the game is over. <br> Aim to use as few clicks as possible and complete the game as fast as possible. <br> Good luck!</p>
         </div>
         <div class="game-container" id="game-area">
         
