--- a/index.html
+++ b/index.html
@@ -3,30 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Concentration - The memory card game!">
     <title>Concentration</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js" defer></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <section class="game-end-modal hidden">
+        <h3>Congratulations!</h3>
+        <p>
+            You found all the matching pairs, well done! Click the button to play again.
+        </p>
+        <button class="btn play-again">Play Again</button>
+    </section>
+    <div class="overlay hidden"></div>
     <div class="title">
-        <span class="material-symbols-outlined brain">
-            neurology
-        </span>
-        <h1>CONCENTRATION</h1>
-        <br>
+        <div class="main-title">
+            <img src="assets/images/brain-icon.webp" alt="brain icon" class="title-icon">
+            <h1>CONCENTRATION</h1>
+        </div>
         <span class="sub-title">A game for your brain</span>
     </div>
-    <div class="container">
-        <div class="text-container">
+    <main class="container">
+        <div class="background">
             <h2>How To Play</h2>
             <p>Click on the cards below to reveal the face of the card. You can only view the faces of two cards at a time so remember the position of them as you turn them over! <br> Once matched, a pair of cards will remain face up and once all pairs have been revealed, the game is over. <br> Aim to use as few clicks as possible and complete the game as fast as possible. <br> Good luck!</p>
         </div>
-        <div class="game-container" id="game-area">
-        
+        <div class="game-container background" id="game-area">
+            <!-- Populated with cards by JavaScript -->
         </div>
-    </div>
+        <div>
 
-    <footer></footer>
+        </div>
+        
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
