--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Concentration - The memory card game!">
     <title>Concentration</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -31,7 +28,12 @@
     <main class="container">
         <div class="background">
             <h2>How To Play</h2>
-            <p>Click on the cards below to reveal the face of the card. You can only view the faces of two cards at a time so remember the position of them as you turn them over! <br> Once matched, a pair of cards will remain face up and once all pairs have been revealed, the game is over. <br> Aim to use as few clicks as possible and complete the game as fast as possible. <br> Good luck!</p>
+            <p>
+                Click on the cards below to reveal the face of the card. You can only view the faces of two cards at a time so remember the position of them as you turn them over!
+                <br>Once matched, a pair of cards will remain face up and once all pairs have been revealed, the game is over.
+                <br>Aim to use as few clicks as possible and complete the game as fast as possible.
+                <br>Good luck!
+            </p>
         </div>
         <div class="game-container background" id="game-area">
             <!-- Populated with cards by JavaScript -->
