updated readme, added code credit comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Modal based on tutorial from freeCodeCamp.org -->
     <section class="game-end-modal hidden">
         <h3>Congratulations!</h3>
         <p>
