--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="overlay hidden"></div>
     <div class="title">
         <div class="main-title">
+            <!-- Modified brain img courtesy of Vector Portal -->
             <img src="assets/images/brain-icon.webp" alt="brain icon" class="title-icon">
             <h1>CONCENTRATION</h1>
         </div>
