added reset button and JS to make functional

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="game-end-modal hidden">
         <h3>Congratulations!</h3>
         <p>
-            You found all the matching pairs, well done! Click the button to play again.
+            You found all the matching pairs, well done! Click below to play again.
         </p>
         <button class="btn play-again">Play Again</button>
     </section>
@@ -40,10 +40,7 @@
         <div class="game-container background" id="game-area">
             <!-- Populated with cards by JavaScript -->
         </div>
-        <div>
-
-        </div>
-        
+        <button class="reset-btn">Reset</button>
     </main>
     <script src="assets/js/script.js"></script>
 </body>
