cleaned up style.css and added to README

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <div class="game-container background" id="game-area">
             <!-- Populated with cards by JavaScript -->
         </div>
-        <button class="reset-btn">Reset</button>
+        <div class="background">
+            <button class="reset-btn">Reset</button>
+        </div>
+        
     </main>
     <script src="assets/js/script.js"></script>
 </body>
